--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,12 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "axios": "^1.5.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "mongoose": "^7.5.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.0.0 <=18.18.0"
   }
 }
