--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,14 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "dependencies": {
+   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "axios": "^1.5.0",
-    "dotenv": "^16.3.1",
+    "mongoose": "^7.5.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "axios": "^1.5.0"
   },
   "engines": {
     "node": ">=16.0.0 <=18.18.0"
