--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "muslimdailybackend",
-  "version": "1.0.0",
-  "description": "Backend for Muslim Daily app",
+  "name": "muslim-daily-backend",
+  "version": "2.4.0",
+  "description": "Backend for Muslim Daily App",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "render-start": "node server.js"
   },
-   "dependencies": {
+  "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "axios": "^1.5.0"
+    "jsonwebtoken": "^9.0.2"
   },
   "engines": {
-    "node": ">=16.0.0 <=18.18.0"
+    "node": ">=18.0.0"
   }
 }
