--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "mongoose": "^7.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "axios": "^1.5.0"
   },
   "engines": {
     "node": ">=18.0.0"
